--- a/basic-css.html
+++ b/basic-css.html
@@ -36,7 +36,7 @@ p.mix {border-style: dotted dashed solid double;}
 
 /*type selector example */
 
-span {
+li {
   background-color: violet;
 }
 
@@ -57,6 +57,16 @@ span {
 /* ID selector */
 #red-background {
   background-color: red;
+}
+
+/* child combinator */
+
+h5 {
+  background-color: white;
+}
+
+footer > h5 {
+  background-color: DodgerBlue;
 }
 
 </style>
@@ -115,8 +125,13 @@ span {
 <img src = "typeselector.PNG" height = "100" alt = "typeselector">
 
 <p>Here's a p with text.</p>
-<span>Here's a span with text.</span>
-<span>Here's another span with text.</span>
+<ul>
+<li>Here's a list item of an unordered list.
+</li>
+</ul>
+<ul>
+  <li>Here's another list item of an unordered list</li>
+</ul>
 
 <h3>Class selectors</h3>
 <p>The CSS  class selector matches elements based on the contents of their class attribute. Via the class selector, CSS can select and access specific elements to style.</p>
@@ -132,7 +147,25 @@ span {
 <img src = "idselector.PNG" height="150" width = "300" alt = "idselector">
 <div id = "red-background">This div has a special ID on it.</div>
 <div>This is a div without a special ID.</div>
-<div>
+
+<h3>Combinators</h3>
+<p>A CSS selector can contain more than one selector and between simple selectors, we can use a combinator</p>
+<h4>Descendant combinators</h4>
+<p>The descendant combinator, represented by a single space ( ) character, combines two selectors such that elements matched by the second selector are selected if they have an ancestor element matching the first selector. Selectors that utilize a descendant combinator are called descendant selectors.</p>
+<p>Below, is a small list of examples:</p>
+<img src = "descendantexample.PNG" height = "300" width = "300">
+<p>In this case above, “ ul li” signifies any list item that is a descendant of an unordered list. </p>
+<h4>Child combinators</h4>
+<p>A child combinator “>” is placed between two CSS selectors. A child combinator requires the elements of the second selector to be the next nested level down of the elements matched by the first selector. </p>
+<p>Below, is the CSS, the HTML, and the result of the child combinator in action.</p>
+<img src = "childcombinator.PNG" height = "200" width = "350">
+<img src = "HTMLcombinator.PNG" height = "200" width ="400">
+
+<footer>
+  <h5> Header #1, in the footer. </h5>
+</footer>
+<h5> Header #2, not in the footer at all.</h5>
+
   <a href = "index.html">return to home page</a>
 </div>
 </body>
